FIx: Removed horizontal scrollbar

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,8 @@
 html {
     font-size: 14px;
+    overflow-x: hidden;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -12,16 +15,13 @@ html {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 main {
@@ -31,6 +31,7 @@ main {
 footer {
     margin-top: auto;
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
